tests/integration/errors/error.orng
// 117
fn main() -> Int {
    let x: (err:Int|)!Char = (.err(117))
    x.err
}